Mon Sep 27 03:50:00 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_compact.cc: Suppress output from xapian-compact in
	  compactstub2 (which I'd disabled for debugging).

Sun Sep 26 13:59:20 GMT 2010  Olly Betts <olly@survex.com>

	* bin/xapian-compact.cc: Extend to work on stub database files too.
	* tests/api_compact.cc: Add feature test compactstub2.

Sun Sep 26 13:28:45 GMT 2010  Olly Betts <olly@survex.com>

	* bin/xapian-compact.cc: Inputs can now be stub database directories,
	  in which case the databases in the stub are used as inputs.
	* tests/api_compact.cc: Add feature test compactstub1.

Sun Sep 26 11:11:49 GMT 2010  Olly Betts <olly@survex.com>

	* xapian-config.in: Add --static option which makes other options
	  report values for static linking.

Tue Sep 21 10:43:17 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Allow phrase
	  generators between a probabilistic prefix and the term itself.

Thu Sep 09 11:18:47 GMT 2010  Olly Betts <olly@survex.com>

	* INSTALL: Raise recommended GCC version from 3.3 to 4.1, since that's
	  the oldest we regularly test with.

Thu Sep 09 11:14:03 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING: Debian etch was discontinued 6 months ago, so it's no longer
	  useful to document packages for developing Xapian on it.

Thu Sep 09 03:15:00 GMT 2010  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Actually write down our guidelines for
	  supporting other software.

Thu Sep 09 00:20:16 GMT 2010  Olly Betts <olly@survex.com>

	* docs/replication.rst: Adjust text to reflect conclusions about the
	  issues in ticket#434.

Thu Sep 09 00:10:03 GMT 2010  Olly Betts <olly@survex.com>

	* docs/replication.rst: Don't suggest using a symlink to switch between
	  databases - a stub database is much better.

Thu Sep 09 00:07:02 GMT 2010  Olly Betts <olly@survex.com>

	* docs/replication.rst: Assume xapian tools are installed on PATH not